--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BouncingBaldies</title>
+  <link rel="stylesheet" href="Projektvecka.css">
 </head>
 <body>
-
-<p></p>
+<header>
+  <h1>Bouncing Baldies</h1>
+  <nav>
+    <ul>
+      <li><a href="home" class="nav-link">home</a></li>
+      <li><a href="home" class="nav-link">home</a></li>
+      <li><a href="home" class="nav-link">home</a></li>
+    </ul>
+  </nav>
+</header>
+<div class="container">
+  <div class="Main">
+    <h1></h1>
+  </div>
+</div>
 
 </body>
+
 </html>
