--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -19,7 +19,16 @@
 </header>
 <div class="container">
   <div class="Main">
-    <h1>fff</h1>
+    <link rel="stylesheet" href="projektvecka.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scroll Slider</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="et-hero-tabs-container">
+      <span class="et-hero-tab-slider"></span>
+    </div>
   </div>
 </div>
 
