--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -12,8 +12,8 @@
   <nav>
     <ul>
       <li><a href="home" class="nav-link">home</a></li>
-      <li><a href="home" class="nav-link">home</a></li>
-      <li><a href="home" class="nav-link">home</a></li>
+      <li><a href="players" class="nav-link">spelare</a></li>
+      <li><a href="about" class="nav-link">om oss</a></li>
     </ul>
   </nav>
 </header>
