--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -7,21 +7,18 @@
   <link rel="stylesheet" href="Projektvecka.css">
 </head>
 <body>
-<header>
+<header class="site-header">
   <h1>Bouncing Baldies</h1>
-  <nav>
-    <ul>
-      <li><a href="home" class="nav-link">home</a></li>
-      <li><a href="players" class="nav-link">spelare</a></li>
-      <li><a href="about" class="nav-link">om oss</a></li>
-    </ul>
+  <nav class="menu">
+    <a href="home">Hem</a>
+    <a href="players">spelare</a>
+    <a href=""
   </nav>
 </header>
 <div class="container">
-  <div class="Main">
-    <link rel="stylesheet" href="projektvecka.css">
-  </head>
-  <body>
+  <div class="main">
+    <p>hej</p>
+  </div>
     <div class="et-hero-tabs-container">
       <span class="et-hero-tab-slider"></span>
     </div>
