--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -1,31 +1,83 @@
-<!DOCTYPE html>
-<html lang="eng">
+<!doctype html>
+<html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BouncingBaldies</title>
-  <link rel="stylesheet" href="Projektvecka.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Bildkort utan CSS</title>
+  <link rel="stylesheet" href="P.css">
 </head>
 <body>
-<header class="site-header">
-  <h1>Bouncing Baldies</h1>
-  <nav class="menu">
-    <a href="home">Hem</a>
-    <a href="players">spelare</a>
-    <a href=""
-  </nav>
-</header>
-<div class="container">
-  <div class="main">
-    <p>hej</p>
+
+
+  <div align="center">
+    <h1>ESPORT TUNERING</h1>
   </div>
-    <div class="et-hero-tabs-container">
-      <span class="et-hero-tab-slider"></span>
-    </div>
+
+
+  <table width="100%" cellpadding="20" cellspacing="20" border="0">
+    <tr>
+      <td valign="top" align="center" width="33%">
+        <a href="#">
+          <img src="images/pic1.jpg" alt="Bild 1" width="100%" style="display:block;">
+        </a>
+        <h3>NAMN</h3>
+        <p>Text</p>
+      </td>
+
+
+      <td valign="top" align="center" width="33%">
+        <a href="#">
+          <img src="images/pic2.jpg" alt="Bild 2" width="100%" style="display:block;">
+        </a>
+        <h3>NAMN</h3>
+        <p>Text</p>
+      </td>
+
+
+      <td valign="top" align="center" width="33%">
+        <a href="#">
+          <img src="images/pic3.jpg" alt="Bild 3" width="100%" style="display:block;">
+        </a>
+        <h3>NAMN</h3>
+        <p>TEXT</p>
+      </td>
+    </tr>
+
+
+    <tr>
+      <td valign="top" align="center" width="33%">
+        <a href="#">
+          <img src="images/pic4.jpg" alt="Bild 4" width="100%" style="display:block;">
+        </a>
+        <h3>NAMN</h3>
+        <p>TEXT</p>
+      </td>
+
+
+      <td valign="top" align="center" width="33%">
+        <a href="#">
+          <img src="images/pic5.jpg" alt="Bild 5" width="100%" style="display:block;">
+        </a>
+        <h3>NAMN</h3>
+        <p>TEXT</p>
+      </td>
+
+
+      <td valign="top" align="center" width="33%">
+        <a href="#">
+          <img src="images/pic6.jpg" alt="Bild 6" width="100%" style="display:block;">
+        </a>
+        <h3>NAMN</h3>
+        <p>TEXT</p>
+      </td>
+    </tr>
+  </table>
+
+
+  <div align="center">
+   
   </div>
-</div>
-<div class="textruta"></div>
+
 
 </body>
-
 </html>
