--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Bildkort utan CSS</title>
-  <link rel="stylesheet" href="P.css">
+  <link rel="stylesheet" href="Projektvecka.css">
 </head>
 <body>
 
@@ -77,14 +77,12 @@
   <div align="center">
    
   </div>
-<<<<<<< HEAD
+
 </div>
 <div class="textruta">
 
 </div>
-=======
 
->>>>>>> 05727cdd391e21cd9740166e07bf8095590c70ef
 
 </body>
 </html>
