--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Bildkort utan CSS</title>
+  <title>esport2</title>
   <link rel="stylesheet" href="Projektvecka.css">
 </head>
 <body>
