--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -18,7 +18,7 @@
     <tr>
       <td valign="top" align="center" width="33%">
         <a href="#">
-          <img src="images/pic1.jpg" alt="Bild 1" width="100%" style="display:block;">
+          <img src="spelare1.jpg" alt="Bild 1" width="100%" style="display:block;">
         </a>
         <h3>NAMN</h3>
         <p>Text</p>
@@ -27,7 +27,7 @@
 
       <td valign="top" align="center" width="33%">
         <a href="#">
-          <img src="images/pic2.jpg" alt="Bild 2" width="100%" style="display:block;">
+          <img src="Spelare2.jpg" alt="Bild 2" width="100%" style="display:block;">
         </a>
         <h3>NAMN</h3>
         <p>Text</p>
@@ -36,7 +36,7 @@
 
       <td valign="top" align="center" width="33%">
         <a href="#">
-          <img src="images/pic3.jpg" alt="Bild 3" width="100%" style="display:block;">
+          <img src="Spelare3.jpg" alt="Bild 3" width="100%" style="display:block;">
         </a>
         <h3>NAMN</h3>
         <p>TEXT</p>
@@ -47,7 +47,7 @@
     <tr>
       <td valign="top" align="center" width="33%">
         <a href="#">
-          <img src="images/pic4.jpg" alt="Bild 4" width="100%" style="display:block;">
+          <img src="Spelare4.jpg" alt="Bild 4" width="100%" style="display:block;">
         </a>
         <h3>NAMN</h3>
         <p>TEXT</p>
@@ -56,7 +56,7 @@
 
       <td valign="top" align="center" width="33%">
         <a href="#">
-          <img src="images/pic5.jpg" alt="Bild 5" width="100%" style="display:block;">
+          <img src="Spelare5.jpg" alt="Bild 5" width="100%" style="display:block;">
         </a>
         <h3>NAMN</h3>
         <p>TEXT</p>
@@ -65,7 +65,7 @@
 
       <td valign="top" align="center" width="33%">
         <a href="#">
-          <img src="images/pic6.jpg" alt="Bild 6" width="100%" style="display:block;">
+          <img src="Spelare6.jpg" alt="Bild 6" width="100%" style="display:block;">
         </a>
         <h3>NAMN</h3>
         <p>TEXT</p>
