--- a/Projektvecka.html
+++ b/Projektvecka.html
@@ -12,6 +12,9 @@
   <div align="center">
     <h1>ESPORT TUNERING</h1>
   </div>
+  <div align="center">
+    <h1>ESPORT TUNERING</h1>
+  </div>
 
 
   <table width="100%" cellpadding="20" cellspacing="20" border="0">
