--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <div align="center">
     <h1 class="page-title">ESPORT TUNERING</h1>
+    <button class="chip">Hem</button>
+    <button class="chip">Om oss</button>
   </div>
 
 
