--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div align="center">
     <h1 class="page-title">ESPORT TUNERING</h1>
     <button class="chip">Hem</button>
-    <button class="chip">Om oss</button>
+    <button class="chip" onclick="scrollToId('Om oss')">Om oss</button>
   </div>
 
 
@@ -22,7 +22,7 @@
         <a href="#">
           <img src="spelare1.jpg" alt="Bild 1" width="100%" style="display:block;">
         </a>
-        <h3>NAMN</h3>
+        <h3>Anton / Antz-Controller(Smoker)</h3>
         <p>Text</p>
       </td>
 
@@ -31,8 +31,8 @@
         <a href="#">
           <img src="Spelare2.jpg" alt="Bild 2" width="100%" style="display:block;">
         </a>
-        <h3>NAMN</h3>
-        <p>Text</p>
+        <h3>Alex / 240hz demon</h3>
+        <p>Roll: Duelist</p>
       </td>
 
 
@@ -40,8 +40,8 @@
         <a href="#">
           <img src="Spelare3.jpg" alt="Bild 3" width="100%" style="display:block;">
         </a>
-        <h3>NAMN</h3>
-        <p>TEXT</p>
+        <h3>Helena / radisbingbong</h3>
+        <p>Roll: Sentinel</p>
       </td>
     </tr>
 
@@ -51,8 +51,8 @@
         <a href="#">
           <img src="Spelare4.jpg" alt="Bild 4" width="100%" style="display:block;">
         </a>
-        <h3>NAMN</h3>
-        <p>TEXT</p>
+        <h3>Gizem / trashysw</h3>
+        <p>Roll: Flex</p>
       </td>
 
 
@@ -60,8 +60,8 @@
         <a href="#">
           <img src="Spelare5.jpg" alt="Bild 5" width="100%" style="display:block;">
         </a>
-        <h3>NAMN</h3>
-        <p>TEXT</p>
+        <h3>Samuel / sampalainen</h3>
+        <p>Roll: Duelist</p>
       </td>
 
 
@@ -69,8 +69,8 @@
         <a href="#">
           <img src="Spelare6.jpg" alt="Bild 6" width="100%" style="display:block;">
         </a>
-        <h3>NAMN</h3>
-        <p>TEXT</p>
+        <h3>William / loopy</h3>
+        <p>Roll: sentinel(Chamber)</p>
       </td>
     </tr>
   </table>
@@ -80,6 +80,14 @@
    
   </div>
 
+</div>
+
+<section class="info-grid" style="margin-top:24px">
+<div class="glass-card" id="Om oss">
+<h4>Om oss</h4>
+<p>Bouncing Baldies är en grupp individer som kombinerar deras styrkor genom att vinna skolturneringar. I gruppen består det av 6 personer vid namn: Anton-Antz Alex-240hz demon Samuel-sampalainen Helena-Radisbingbong William-Loopy Gizem-Trashysw. 
+
+Detta är ett nytt kapitel för laget eftersom detta är deras första turnering tillsammans som ett lag. Våra styrkor som lag är våra individuella styrkor som spelare men hoppas på att bli bättre som lag under denna turnering.</p>
 </div>
 
 
