--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <div align="center">
     <h1 class="page-title">ESPORT TUNERING</h1>
-    <button class="chip">Hem</button>
-    <button class="chip" onclick="scrollToId('Om oss')">Om oss</button>
+    <button class="chip chip1">Hem</button>
+    <button class="chip chip2" onclick="scrollToId('Om oss')">Om oss</button>
   </div>
   
   <img src="bb_GRU.jpg" width="100%" id="logga">
