--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a href="#">
           <img src="spelare1.jpg" alt="Bild 1" width="100%" style="display:block;">
         </a>
-        <h3>Anton / Antz-Controller(Smoker)</h3>
-        <p>Text</p>
+        <h3 class="text-outline">Anton / Antz</h3>
+        <p>Controller(Smoker)</p>
       </td>
 
 
@@ -32,7 +32,7 @@
         <a href="#">
           <img src="Spelare2.jpg" alt="Bild 2" width="100%" style="display:block;">
         </a>
-        <h3>Alex / 240hz demon</h3>
+        <h3 class="text-outline">Alex / 240hz demon</h3>
         <p>Roll: Duelist</p>
       </td>
 
@@ -41,7 +41,7 @@
         <a href="#">
           <img src="Spelare3.jpg" alt="Bild 3" width="100%" style="display:block;">
         </a>
-        <h3>Helena / radisbingbong</h3>
+        <h3 class="text-outline">Helena / radisbingbong</h3>
         <p>Roll: Sentinel</p>
       </td>
     </tr>
@@ -52,7 +52,7 @@
         <a href="#">
           <img src="Spelare4.jpg" alt="Bild 4" width="100%" style="display:block;">
         </a>
-        <h3>Gizem / trashysw</h3>
+        <h3 class="text-outline">Gizem / trashysw</h3>
         <p>Roll: Flex</p>
       </td>
 
@@ -61,7 +61,7 @@
         <a href="#">
           <img src="Spelare5.jpg" alt="Bild 5" width="100%" style="display:block;">
         </a>
-        <h3>Samuel / sampalainen</h3>
+        <h3 class="text-outline">Samuel / sampalainen</h3>
         <p>Roll: Duelist</p>
       </td>
 
@@ -70,7 +70,7 @@
         <a href="#">
           <img src="Spelare6.jpg" alt="Bild 6" width="100%" style="display:block;">
         </a>
-        <h3>William / loopy</h3>
+        <h3 class="text-outline">William / loopy</h3>
         <p>Roll: sentinel(Chamber)</p>
       </td>
     </tr>
@@ -83,8 +83,8 @@
 
 </div>
 
-<section class="info-grid" style="margin-top:24px">
-<div class="glass-card" id="Om oss">
+<section class="info-grid" style="margin-top:24px" id="Om oss">
+<div class="glass-card">
 <h4>Om oss</h4>
 <p>Bouncing Baldies är en grupp individer som kombinerar deras styrkor genom att vinna skolturneringar. I gruppen består det av 6 personer vid namn: Anton-Antz Alex-240hz demon Samuel-sampalainen Helena-Radisbingbong William-Loopy Gizem-Trashysw. 
 
