--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <div align="center">
     <h1 class="page-title">ESPORT TUNERING</h1>
-    <button class="chip chip1">Hem</button>
-    <button class="chip chip2" onclick="scrollToId('Om oss')">Om oss</button>
+    <button class="chip chip2" onclick="scrollToId('Omoss')">Om oss</button>
   </div>
   
   <img src="bb_GRU.jpg" width="100%" id="logga">
@@ -83,8 +82,8 @@
 
 </div>
 
-<section class="info-grid" style="margin-top:24px" id="Om oss">
-<div class="glass-card">
+<section class="info-grid" style="margin-top:24px">
+<div class="glass-card" id="Omoss">
 <h4>Om oss</h4>
 <p>Bouncing Baldies är en grupp individer som kombinerar deras styrkor genom att vinna skolturneringar. I gruppen består det av 6 personer vid namn: Anton-Antz Alex-240hz demon Samuel-sampalainen Helena-Radisbingbong William-Loopy Gizem-Trashysw. 
 
