--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
   <div align="center">
     <h1 class="page-title">ESPORT TUNERING</h1>
-    <button class="chip chip2" onclick='scrollToId("Om oss");'>Om oss</button>
+    <div class="button group">
+      <button class="chip chip2" onclick='scrollToId("Om oss");'>Om oss</button>
+    </div>
   </div>
   
   <img src="bb_GRU.jpg" width="100%" id="logga">
