--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </td>
 
 
-      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">Öppna textbox>
+      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">
         <a href="#">
           <img src="Spelare6.jpg" alt="Bild 6" width="100%" style="display:block;">
         </a>
