--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <table width="100%" cellpadding="20" cellspacing="20" border="0">
     <tr>
-      <td valign="top" align="center" width="33%">
+      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">
         <a href="#">
           <img src="spelare1.jpg" alt="Bild 1" width="100%" style="display:block;">
         </a>
@@ -29,7 +29,7 @@
       </td>
 
 
-      <td valign="top" align="center" width="33%">
+      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">
         <a href="#">
           <img src="Spelare2.jpg" alt="Bild 2" width="100%" style="display:block;">
         </a>
@@ -37,7 +37,7 @@
         <p>Roll: Duelist</p>
       </td>
 
-      <td valign="top" align="center" width="33%">
+      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">
         <a href="#">
           <img src="Spelare3.jpg" alt="Bild 3" width="100%" style="display:block;">
         </a>
@@ -48,7 +48,7 @@
 
 
     <tr>
-      <td valign="top" align="center" width="33%">
+      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">
         <a href="#">
           <img src="Spelare4.jpg" alt="Bild 4" width="100%" style="display:block;">
         </a>
@@ -57,7 +57,7 @@
       </td>
 
 
-      <td valign="top" align="center" width="33%">
+      <td valign="top" align="center" width="33%" onclick="toggleTextbox()">
         <a href="#">
           <img src="Spelare5.jpg" alt="Bild 5" width="100%" style="display:block;">
         </a>
