--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
 
-
+<header>
   <div align="center">
     <h1 class="page-title">ESPORT TUNERING</h1>
     <div class="button group">
       <button class="chip2" onclick="scrollToId('Omoss')">Om oss</button>
     </div>
   </div>
-  
+</header>
+
   <img src="bb_GRU.jpg" width="100%" id="logga">
 
   <table width="100%" cellpadding="20" cellspacing="20" border="0">
