--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="Spelare3.jpg" alt="Bild 3" width="100%" style="display:block;">
         </a>
         <h3 class="text-outline">Helena / radisbingbong</h3>
-        <p>Roll: Sentinel</p>
+        <p>Roll: Sentinel.</p>
       </td>
     </tr>
 
