--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 <section class="info-grid" style="margin-top:24px">
 <div class="glass-card" id="Omoss">
 <h4>Om oss</h4>
-<p>Bouncing Baldies är en grupp individer som kombinerar deras styrkor genom att vinna skolturneringar. I gruppen består det av 6 personer vid namn: Anton-Antz, Alex-240hz demon, Samuel-sampalainen, Helena-Radisbingbong, William-Loopy & Gizem-Trashysw. 
+<p>Bouncing Baldies är en grupp individer som kombinerar deras styrkor genom att vinna skolturneringar. I gruppen består det av 6 personer vid namn: Anton (Antz), Alex (240hz demon), Samuel (sampalainen), Helena (Radisbingbong), William (Loopy) & Gizem (Trashysw). 
 
-Detta är ett nytt kapitel för laget eftersom detta är deras första turnering tillsammans som ett lag. Våra styrkor som lag är våra individuella styrkor som spelare men hoppas på att bli bättre som lag under denna turnering.</p>
+Detta är ett nytt kapitel för laget eftersom detta är deras första turnering tillsammans som ett lag. </p>
+<p>" Våra styrkor som lag är våra individuella styrkor som spelare men hoppas på att bli bättre som lag under denna turnering ".</p>
 </div>
 
 <div class="textbox-container" id="textbox">
