--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Detta är ett nytt kapitel för laget eftersom detta är deras första turnering
 
 <div class="textbox-container" id="textbox">
     <div class="textbox-header">
-        <button class="close-btn" onclick="toggleTextbox()">close</button>
+        <button class="close-btn" onclick="toggleTextbox()">Close</button>
     </div>
 </div>
 
