--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
   <div align="center">
-    <h1 class="page-title">ESPORT TUNERING</h1>
+    <h1 class="page-title">Bouncing baldies</h1>
     <div class="button group">
       <button class="chip2" onclick="scrollToId('Omoss')">Om oss</button>
     </div>
