--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@ Detta är ett nytt kapitel för laget eftersom detta är deras första turnering
 <p>" Våra styrkor som lag är våra individuella styrkor som spelare men hoppas på att bli bättre som lag under denna turnering ".</p>
 </div>
 
+<section class="info-grid" style="margin-top:24px"></section>
+<div class="glass-card">
+  <h4>Bouncing Baldies walk-in</h4>
+  <video controls>
+    <source src="walk in new fixed .mp4" type="video/mp4">
+    <track kind="subtitles" src="subs.vtt" srclang="en" label="English" default>
+  </video>
+
+</div>
+
 <div class="textbox-container" id="textbox">
     <div class="textbox-header">
         <button class="close-btn" onclick="toggleTextbox()">close</button>
