--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@ Detta är ett nytt kapitel för laget eftersom detta är deras första turnering
 <section class="info-grid" style="margin-top:24px"></section>
 <div class="glass-card">
   <h4>Bouncing Baldies walk-in</h4>
-  <video controls>
+  <video width="360" height="360" controls>
     <source src="walk in new fixed .mp4" type="video/mp4">
     <track kind="subtitles" src="subs.vtt" srclang="en" label="English" default>
   </video>
-
 </div>
 
 <div class="textbox-container" id="textbox">
