--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="#">
           <img src="Spelare3.jpg" alt="Bild 3" width="100%" style="display:block;">
         </a>
-        <h3 class="text-outline">Helena / radisbingbong</h3>
+        <h3 class="text-outline">Helena / radisbingbong.</h3>
         <p>Roll: Sentinel.</p>
       </td>
     </tr>
